--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Abdillah Alli",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
